@@ -1,3 +1,7 @@
+30 January 2019: Ralph
+	- Fix case in which query timeout can result in marking delegation
+	  as edns_lame_known.
+
 29 January 2019: Wouter
 	- Fix spelling of tls-ciphers in example.conf.in.
 	- Fix #4224: auth_xfr_notify.rpl test broken due to typo
